[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "svg2pdf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
svg2pdf = { git = "https://github.com/typst/svg2pdf", branch = "main"}
usvg = "=0.32"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
